# nanmi-assets

./: .gitignore  README.md
QAT/: qat_template.py
RANSAC/C++/: CMakeLists.txt
RANSAC/Python/: ransac.py
TensorRT_Plugins/DCNv2/: dcn_v2.py  make.sh
TensorRT_Plugins/DCNv2/src/cpu/: dcn_v2_cpu.cpp
TensorRT_Plugins/DCNv2/test/: export_onnx.py  test_dcn.py
TensorRT_Plugins/dcnv2_trt/: DCNv2Plugin.cpp  DCNv2Plugin.cu  README.md
algorithm/: 滑动平均算法.cpp  滑动平均算法.py
algorithm/RANSAC/C++/: ransac.cpp
algorithm/RANSAC/Python/: ransac.py
camera-calibration/: camera_calibrator.py  draw_3D_axes_and_cubes.py  readme
cpp/: C++判断路径是否存在 不存在创建路径.cpp  C++日志记录方法-两种方法.cpp  text_table.h  time_t转可读时间字符串.cpp  读写文件.cpp
cpp/Deepstream多级推理，并且抠图/: config_infer_primary.txt  config_infer_secondary.txt  deepstream_app_config.txt  readme.md  sgie_labels.txt
cpp/Deepstream多级推理，并且抠图/nvdsinfer_custom_impl_plugin/: CMakeLists.txt  nvdsparser_custom_impl.cpp  yololayer.cu  yololayer.h
cpp/OpenCL矩阵计算示例/: CMakeLists.txt  matrix_mul.cl  opencl_gemm.cpp
cpp/Tracker和两种算法deeport-bytetrack/: main.cpp
cpp/Tracker和两种算法deeport-bytetrack/detector/YOLOv5/include/: YOLOv5Detector.h
cpp/Tracker和两种算法deeport-bytetrack/detector/YOLOv5/src/: YOLOv5Detector.cpp
cpp/Tracker和两种算法deeport-bytetrack/tracker/bytetrack/include/: BYTETracker.h
cpp/Tracker和两种算法deeport-bytetrack/tracker/bytetrack/src/: BYTETracker.cpp  utils.cpp
cpp/ViBe背景建模算法实现/: CMakeLists.txt  main.cpp  vibe.cpp  vibe.h
cpp/deepstream-segmentation-app/: deepstream_segmentation_app.cpp
cpp/多线程池/C-Thread-Pool/: CMakeLists.txt
cxx/corp_image_CUDA/: corp_img.cu
cxx~python/cxx_use_python/method_1/: CMakeLists.txt  host.cxx  readme  script_function.py
cxx~python/cxx_use_python/method_2/: CMakeLists.txt  host.cxx  readme
cxx~python/cxx_use_python/method_2/generate_library/: script_function.py  setup.py
cxx~python/python_use_cxx/: host.py
deepstream/: GStreamer插件列表.xlsx  ~$配置文件属性.xlsx  配置文件属性.xlsx
deepstream/deepstream-segmentation-app/: CMakeLists.txt  segmentation-infer-config.txt
deepstream/rtsp_send/cxx/: Makefile  gst-rtsp.cxx
deepstream/rtsp_send/python/: rtsp_send.py
documents/: GStreamer插件列表.xlsx
documents/C++ 20 标准手册/: 库 (C++20).txt
misc/vscode-debug-example/: readme.txt
misc/vscode-debug-example新版/: readme.txt
python/: Pyside6模板.py  Python获取GPU信息脚本.py  boundary_scale.py  coco_annotations_to_yolo_format.py  gst_opencv_cap_stream_or_camera.py  gst_opencv_write_rtsp_stream.py  imgs2video.py  leetcode_excise.py  mAP.py  send_email.py  tensorrt推理模板.py  torch Porfiler性能测试.py  video2img.py  wts提取anchor或者转10进制权重.py  分割算法的评价指标metrics.py  判断时间先后删除文件delete.py  搭建ftp服务器.py  自定义datasets和预处理操作.py  自定义torchvision.transforms转换方式.py
python/camera-calibration/: camera_calibrator.py
python/dcn/: dcn.py
python/deploy部署相关/: TensorRT PTQ Python API示例.py  TensorRT QAT量化示例.py  TensorRT推理模板.cpp  TensorRT插件 Python API模版.py  pytorch FX模式QAT量化.py  模型稀疏化.py  模型蒸馏.py  模型裁剪.py  混合精度训练.py  稀疏化训练.py
python/deploy部署相关/CUDA/dcn/: deform_conv_v2.py  deform_conv_v2_1.py
python/deploy部署相关/TensorRT/: yolov5_det_cuda-python.py
python/deploy部署相关/TensorRT/TensorRT_Plugins/DCNv2/test/: export_dcn_onnx.py
python/deploy部署相关/TensorRT/TensorRT_Plugins/dcnv2_trt/: CMakeLists.txt
python/deploy部署相关/TensorRT_Plugins/dcnv2_trt/: DCNv2Plugin.h
python/deploy部署相关/Triton/: client.py  config.pbtxt  readme.txt  test.py
python/deploy部署相关/unet-onnxruntime/: onnx_model_example.py
python/deploy部署相关/unet-trt/: CMakeLists.txt  logging.h  unet.cpp
python/deploy部署相关/自定义OP算子并注册/: Pytorch自定义算子并注册.py
python/grabcut前景提取和前景替换/: frontground_change.py  frontground_get.py
python/labelme标注json转COCO格式json/: labelme2coco.py  readme.txt
python/labelme标注json转YOLO格式txt/: labelme2yolo.py  readme.txt
python/mAP计算/: README.md
python/opencv模板匹配/: mobanpipei.py
python/摄像头数据采集脚本/: cameras.cfg  cameras.json  record_camera.py
python/相机标定/: generate_chess_squares.py
sketch-generate/: sketch.py
trt_plugin_template/: CMakeLists.txt  test.cpp
trt_plugin_template/plugins/: AddPlugin.cu
utils/: ncnnMat2cvMat.cxx  readme.md
